@startuml scenario_uml
skinparam classAttributeIconSize 0
left to right direction

abstract class Book{
    +BookCategory
    +Page
    +Author
}

class FantasticBook{
    -_bookCategory
    -_page
    -_author
    +FantasticBook()
}

class ScienceFictionBook{
    -_bookCategory
    -_page
    -_author
    +ScienceFictionBook()
}

abstract class BookFactory{
    +GetBook()
}

class FantasticFactory{
    -_page
    -_author
    +FantasticFactory()
}

class ScienceFictionFactory{
    -_page
    -_author
    +ScienceFictionFactory()
}


ScienceFictionBook --|> Book
FantasticBook --|> Book
ScienceFictionFactory --|> BookFactory
FantasticFactory --|> BookFactory
FantasticFactory ..> FantasticBook
ScienceFictionFactory ..> ScienceFictionBook


@enduml